--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="Emart"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@drawable/emart_appicon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
