--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  http: ^0.12.1
+  shared_preferences: ^0.5.7+2
   font_awesome_flutter: 8.8.1
   flutter_svg: ^0.17.1
   flutter:
